--- a/CNC/Interface/index.html
+++ b/CNC/Interface/index.html
@@ -8,8 +8,8 @@
     <meta name="author" content="Alex,Sai Team AlouScha">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="300">
-    <link rel="stylesheet" href="../../design/index.css">
-    <link rel="stylesheet" href="../../design/print.css">
+    <link rel="stylesheet" href="design/index.css">
+    <link rel="stylesheet" href="design/print.css">
 
     <title>BOT NET</title>
 </head>
