--- a/CNC/Interface/index.html
+++ b/CNC/Interface/index.html
@@ -28,7 +28,7 @@
 </aside>
 
 <main id="main">
-    <section id="status">
+    <section id="status" class="content">
         <table id="status-overview">
             <thead>
             <tr>
@@ -39,25 +39,184 @@
             </tr>
             </thead>
 
-        <tbody>
-        <tr>
-            <td>asgfadg</td>
-            <td>dsfgs</td>
-            <td>--e-</td>
-            <td>hsdsh</td>
-        </tr>
-        <tr>
-            <td>-bbbb--</td>
-            <td>-nnnn--</td>
-            <td>-mmmm--</td>
-            <td>-hhhh---</td>
-        </tr>
-        </tbody>
+            <tbody>
+            <tr>
+                <td>asgfadg</td>
+                <td>dsfgs</td>
+                <td>--e-</td>
+                <td><button type="button" name="action" value="0">Start/Stop</button></td>
+            </tr>
+            <tr>
+                <td>-bbbb--</td>
+                <td>-nnnn--</td>
+                <td>-mmmm--</td>
+                <td><button type="button" name="action" value="0">Start/Stop</button></td>
+            </tr>
+            <tr>
+                <td>asgfadg</td>
+                <td>dsfgs</td>
+                <td>--e-</td>
+                <td><button type="button" name="action" value="0">Start/Stop</button></td>
+            </tr>
+            <tr>
+                <td>-bbbb--</td>
+                <td>-nnnn--</td>
+                <td>-mmmm--</td>
+                <td><button type="button" name="action" value="0">Start/Stop</button></td>
+            </tr>
+            <tr>
+                <td>asgfadg</td>
+                <td>dsfgs</td>
+                <td>--e-</td>
+                <td><button type="button" name="action" value="0">Start/Stop</button></td>
+            </tr>
+            <tr>
+                <td>-bbbb--</td>
+                <td>-nnnn--</td>
+                <td>-mmmm--</td>
+                <td><button type="button" name="action" value="0">Start/Stop</button></td>
+            </tr>
+            <tr>
+                <td>asgfadg</td>
+                <td>dsfgs</td>
+                <td>--e-</td>
+                <td><button type="button" name="action" value="0">Start/Stop</button></td>
+            </tr>
+            <tr>
+                <td>-bbbb--</td>
+                <td>-nnnn--</td>
+                <td>-mmmm--</td>
+                <td><button type="button" name="action" value="0">Start/Stop</button></td>
+            </tr>
+            <tr>
+                <td>asgfadg</td>
+                <td>dsfgs</td>
+                <td>--e-</td>
+                <td><button type="button" name="action" value="0">Start/Stop</button></td>
+            </tr>
+            <tr>
+                <td>-bbbb--</td>
+                <td>-nnnn--</td>
+                <td>-mmmm--</td>
+                <td><button type="button" name="action" value="0">Start/Stop</button></td>
+            </tr>
+            <tr>
+                <td>asgfadg</td>
+                <td>dsfgs</td>
+                <td>--e-</td>
+                <td><button type="button" name="action" value="0">Start/Stop</button></td>
+            </tr>
+            <tr>
+                <td>-bbbb--</td>
+                <td>-nnnn--</td>
+                <td>-mmmm--</td>
+                <td><button type="button" name="action" value="0">Start/Stop</button></td>
+            </tr>
+            <tr>
+                <td>asgfadg</td>
+                <td>dsfgs</td>
+                <td>--e-</td>
+                <td><button type="button" name="action" value="0">Start/Stop</button></td>
+            </tr>
+            <tr>
+                <td>-bbbb--</td>
+                <td>-nnnn--</td>
+                <td>-mmmm--</td>
+                <td><button type="button" name="action" value="0">Start/Stop</button></td>
+            </tr>
+            </tbody>
         </table>
     </section>
-    <section id="tasks">
-        TODO:Task
+    <section id="tasks" class="content">
+        <table id="task-overview">
+            <thead>
+            <tr>
+                <td>Workload</td>
+                <td>IP</td>
+                <td>Auftrag (ID)</td>
+                <td>Laufzeit</td>
+            </tr>
+            </thead>
+
+            <tbody>
+            <tr>
+                <td>asgfadg</td>
+                <td>dsfgs</td>
+                <td>--e-</td>
+                <td>hsdsh</td>
+            </tr>
+            <tr>
+                <td>-bbbb--</td>
+                <td>-nnnn--</td>
+                <td>-mmmm--</td>
+                <td>-hhhh---</td>
+            </tr>
+            <tr>
+                <td>asgfadg</td>
+                <td>dsfgs</td>
+                <td>--e-</td>
+                <td>hsdsh</td>
+            </tr>
+            <tr>
+                <td>-bbbb--</td>
+                <td>-nnnn--</td>
+                <td>-mmmm--</td>
+                <td>-hhhh---</td>
+            </tr>
+            <tr>
+                <td>asgfadg</td>
+                <td>dsfgs</td>
+                <td>--e-</td>
+                <td>hsdsh</td>
+            </tr>
+            <tr>
+                <td>-bbbb--</td>
+                <td>-nnnn--</td>
+                <td>-mmmm--</td>
+                <td>-hhhh---</td>
+            </tr>
+            <tr>
+                <td>asgfadg</td>
+                <td>dsfgs</td>
+                <td>--e-</td>
+                <td>hsdsh</td>
+            </tr>
+            <tr>
+                <td>-bbbb--</td>
+                <td>-nnnn--</td>
+                <td>-mmmm--</td>
+                <td>-hhhh---</td>
+            </tr>
+            <tr>
+                <td>asgfadg</td>
+                <td>dsfgs</td>
+                <td>--e-</td>
+                <td>hsdsh</td>
+            </tr>
+            <tr>
+                <td>-bbbb--</td>
+                <td>-nnnn--</td>
+                <td>-mmmm--</td>
+                <td>-hhhh---</td>
+            </tr>
+            <tr>
+                <td>asgfadg</td>
+                <td>dsfgs</td>
+                <td>--e-</td>
+                <td>hsdsh</td>
+            </tr>
+            <tr>
+                <td>-bbbb--</td>
+                <td>-nnnn--</td>
+                <td>-mmmm--</td>
+                <td>-hhhh---</td>
+            </tr>
+            </tbody>
+        </table>
     </section>
+
+
+
 </main>
 
 
