requests.js added

--- a/CNC/Interface/index.html
+++ b/CNC/Interface/index.html
@@ -10,6 +10,7 @@
     <meta http-equiv="refresh" content="300">
     <link rel="stylesheet" href="design/index.css">
     <link rel="stylesheet" href="design/print.css">
+    <script src="requests.js"></script>
 
     <title>BOT NET</title>
 </head>
