Korrektur: Die Tasks-Table war auskommentiert

--- a/CNC/Interface/index.html
+++ b/CNC/Interface/index.html
@@ -30,6 +30,7 @@
 
 <main id="main">
     <section id="status" class="content">
+		Status
         <table id="status-overview">
             <thead>
             <tr>
@@ -124,11 +125,12 @@
                 <td>-nnnn--</td>
                 <td>-mmmm--</td>
                 <td><button type="button" name="action" value="0">Start/Stop</button></td>
-            </tr>
+            </tr>-->
             </tbody>
         </table>
     </section>
     <section id="tasks" class="content">
+		Tasks
         <table id="task-overview">
             <thead>
             <tr>
@@ -140,7 +142,7 @@
             </thead>
 
             <tbody>
-            <tr>
+            <!--<tr>
                 <td>asgfadg</td>
                 <td>dsfgs</td>
                 <td>--e-</td>
