changed clearTable() from while to for loop

--- a/CNC/Interface/index.html
+++ b/CNC/Interface/index.html
@@ -34,10 +34,10 @@
         <table id="status-overview">
             <thead>
             <tr>
-                <th>Workload</th>
+                <th>Auftrag ID</th>
                 <th>IP</th>
-                <th>Auftrag (ID)</th>
-                <th>Stop/Start Button</th>
+                <th>Task</th>
+                <th>Workload</th>
             </tr>
             </thead>
 
@@ -51,10 +51,10 @@
         <table id="task-overview">
             <thead>
             <tr>
-                <th>Workload</th>
+                <th>Auftrag ID</th>
                 <th>IP</th>
-                <th>Auftrag (ID)</th>
-                <th>Laufzeit</th>
+                <th>Task</th>
+                <th>Workload</th>
             </tr>
             </thead>
 
