eine kürzere version der vorherigen sortierens gemacht. die alte version ist noch drin jedoch auskommentiert. betroffen: index.html, cncRequest.js

--- a/CNC/Interface/index.html
+++ b/CNC/Interface/index.html
@@ -34,9 +34,9 @@
         <table id="status-overview">
             <thead>
             <tr>
-                <th id="id" onclick="sortID()" role="columnheader button">Auftrag ID ↕</th>
-                <th id="ip" onclick="sortIP()">IP ↕</th>
-                <th id="workload" onclick="sortWorkload()">Workload ↕</th>
+                <th id="id" onclick="sort('id')" role="columnheader button">Auftrag ID ↕</th>
+                <th id="ip" onclick="sort('ip')">IP ↕</th>
+                <th id="workload" onclick="sort('workload')">Workload ↕</th>
                 <th id="task">Start/Stop</th>
             </tr>
             </thead>
