moved sort stuff into sort.js

--- a/CNC/Interface/index.html
+++ b/CNC/Interface/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="description" content="INT-WAW Übung">
     <meta name="keywords" content="HTML,CSS">
-    <meta name="author" content="Alex,Sai Team AlouScha">
+    <meta name="author" content="Alex,Sai,Tobi Team AlouScha">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="design/index.css">
     <link rel="stylesheet" href="design/print.css" media="print">
 	<script src="cncRequest.js"></script>
+    <script src="sort.js"></script>
 
     <title>CNC Interface</title>
 </head>
