--- a/CNC/Interface/index.html
+++ b/CNC/Interface/index.html
@@ -71,11 +71,11 @@
 			ID <input type="number" id="input_id" name="id" required><br>
 			<p>Type: </p> 
 			<label for="hash-md5">MD5-Hash</label>
-			<input type="radio" name="type" id="hash-md5" value="hash-md5">
+			<input type="radio" name="hash-md" id="hash-md5" value="hash-md5">
 			<label for="hash-sha256">SHA256-Hash</label>
-			<input type="radio" name="type" id="hash-sha256" value="hash-sha256">
+			<input type="radio" name="hash-sha" id="hash-sha256" value="hash-sha256">
 			<label for="crack-md5">Crack MD5-Hash</label>
-			<input type="radio" name="type" id="crack-md5" value="crack-md5"><br>
+			<input type="radio" name="crack-md" id="crack-md5" value="crack-md5"><br>
 			<br>
 			<p>Data: </p>
 			<input type="text" name="data" required>
