setInterval-bug gefixt

--- a/CNC/Interface/index.html
+++ b/CNC/Interface/index.html
@@ -16,7 +16,7 @@
     <title>CNC Interface</title>
 </head>
 
-<body onload="cncServerRequest(); enablePeriodicCNCRequest();">
+<body onload="cncServerRequest();">
 
 <header>
     <h2>CNC Interface</h2>
