task spalte rein gemacht

--- a/CNC/Interface/index.html
+++ b/CNC/Interface/index.html
@@ -39,7 +39,8 @@
                 <th id="id" onclick="setSorting('id')">Auftrag ID ↕</th>
                 <th id="ip" onclick="setSorting('ip')">IP ↕</th>
                 <th id="workload" onclick="setSorting('workload')">Workload ↕</th>
-                <th id="task" onclick="setSorting('task')">Start/Stop ↕</th>
+                <th id="task" onclick="setSorting('task')">Task ↕</th>
+                <th id="activate">Start / Stop</th>
             </tr>
             </thead>
 
@@ -68,7 +69,7 @@
         <h3>Neuen Task erstellen</h3>
       <form id="taskform" action="" method="" onsubmit=return"">
 			<p>ID: </p>
-      <input type="text-" id="input_id" name="id"><br>
+      <input type="text" id="input_id" name="id"><br>
 
       <p>Data: </p>
 			<input type="text" name="data">
