Request Task-Daten für Tasktabelle programmiert

--- a/CNC/Interface/index.html
+++ b/CNC/Interface/index.html
@@ -12,6 +12,7 @@
     <script src="cncRequest.js"></script>
     <script src="sort.js"></script>
     <script type="text/javascript" src="SendData.js"></script>
+    <script type="text/javascript" src="LoadTask.js"></script>
 
     <title>CNC Interface</title>
 </head>
