--- a/CNC/Interface/index.html
+++ b/CNC/Interface/index.html
@@ -11,29 +11,22 @@
     <link rel="stylesheet" href="design/print.css" media="print">
     <script src="cncRequest.js"></script>
     <script src="sort.js"></script>
+    <script src="menu.js"></script>
     <script type="text/javascript" src="SendData.js"></script>
     <script type="text/javascript" src="LoadTask.js"></script>
-
     <title>CNC Interface</title>
 </head>
 
-<body onload="cncServerRequest();">
-
-<header>
-    <h2>CNC Interface</h2>
-</header>
+<body onload="cncServerRequest(); menuGotoStatus(); enablePeriodicCNCRequest();">
 
 <aside id="sidemenu">
-	<h3>Menu</h3>
-    <menu>
-        <li><a href="#status" onclick="enablePeriodicCNCRequest()">Status</a></li>
-        <li><a href="#tasks" onclick="disablePeriodicCNCRequest()">Tasks</a></li>
-    </menu>
+    <p><a id="menu_status" href="#status" onclick="enablePeriodicCNCRequest(); menuActiveStatusEntry();">Status</a></p>
+    <p><a id="menu_tasks" href="#tasks" onclick="disablePeriodicCNCRequest(); menuActiveTasksEntry();">Tasks</a></p>
 </aside>
 
 <main id="main">
     <section id="status" class="content">
-		<h3>Status</h3>
+		<h2>Botnet status interface (BSI)</h2>
         <table id="status-overview">
             <thead>
             <tr>
@@ -51,7 +44,7 @@
         </table>
     </section>
     <section id="tasks" class="content">
-		<h3>Tasks</h3>
+		<h2>Tasks</h2>
         <table id="task-overview">
             <thead>
             <tr>
@@ -68,24 +61,17 @@
         </table>
 
         <h3>Neuen Task erstellen</h3>
-      <form id="taskform" action="" method="" onsubmit=return"">
-			<p>ID: </p>
-      <input type="text" id="input_id" name="id"><br>
-
-      <p>Data: </p>
-			<input type="text" name="data">
-<!--einstellen das nur  ein raiotype ausgewählt werden kann-->
-      <p>Type: </p>
+      <form id="taskform" action="" method="" onsubmit="return">
+		ID: <input type="text" id="input_id" name="id"><br>
+		Data: <input type="text" name="data">
+		<p>Type: </p>
 			<label for="hash-md5">MD5-Hash</label>
-			<input type="radio" name="type" id="hash-md5" value="hash-md5" checked>
-      <br>
+			<input type="radio" name="type" id="hash-md5" value="hash-md5" checked><br>
 			<label for="hash-sha256">SHA256-Hash</label>
-			<input type="radio" name="type" id="hash-sha256" value="hash-sha256">
-      <br>
-      <label for="crack-md5">Crack MD5-Hash</label>
+			<input type="radio" name="type" id="hash-sha256" value="hash-sha256"><br>
+			<label for="crack-md5">Crack MD5-Hash</label>
 			<input type="radio" name="type" id="crack-md5" value="crack-md5"><br>
-      <br>
-<!--Button muss noch designt werden in css-->
+			<br>
 			<button id="submit"  name="submit" onclick="sendDataToServer()">Senden</button>
         </form>
     </section>
