--- a/CNC/Interface/index.html
+++ b/CNC/Interface/index.html
@@ -66,7 +66,7 @@
         <h3 >Neuen Task erstellen</h3>
 
 
-        <form id="taskform" action="" method="post" onsubmit="sendDataToServer()">
+        <form id="taskform" action="" method="" onsubmit="return sendDataToServer()">
             ID: <input type="text" id="input_id" name="id"><br>
             Data: <input type="text" name="data">
 
@@ -78,7 +78,7 @@
             <label for="crack-md5">Crack MD5-Hash</label>
             <input type="radio" name="type" id="crack-md5" value="crack-md5"><br>
             <br>
-            <button id="submit" name="submit" onclick="sendDataToServer()">Senden</button>
+            <button type="submit" id="submit" onclick="sendDataToServer()">Senden</button>
         </form>
     </section>
 
